--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
 
 [dependencies]
-reqwest = "0.8"
+reqwest = { version = "0.11", features = ["blocking"] }
 clap = "2.29"
 serde = "1.0"
 serde_derive = "1.0"
